--- a/.project
+++ b/.project
@@ -1,9 +1,9 @@
 {
     "date": ["WINTER", "2022.06"],
     "medium": ["PROGRAMMING"],
-    "material": ["ROLAND_FP-10", "RASPBERRY_PI-4"],
-    "hardware": [],
-    "software": ["AUTOCAD", "LISP-AUTOLISP-VISUALLISP", "PYTHON", "PYCHARM", "ACROBAT-PDF"],
-    "overview": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
-    "making": "Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? "
+    "material": ["ROLAND_FP-10", "LED_STRIPE"],
+    "hardware": ["RASPBERRY_PI-4"],
+    "software": ["PYTHON"],
+    "overview": "Скрипт для подсветки клавиш электронного пианино.",
+    "making": "Скрипт (piano_key_illuminator)[https://github.com/rydercalmdown/piano_key_illuminator] by @rydercalmdown для _**`RASPBERRY_PI-4`**_ дает доступ к управлению подсоединенной к нему светодиодной лентой и каждым её светодиодом отдельно. Midi-сигнал електронного пианино по _USB_ передается на _**`RASPBERRY_PI-4`**_ и зажигает светодиод соответствующий нажатой клавише пианино." 
 }
