--- a/.project
+++ b/.project
@@ -1,9 +1,9 @@
 {
     "date": ["WINTER", "2022.06"],
     "medium": ["PROGRAMMING"],
-    "material": ["ROLAND_FP-10", "LED_STRIPE"],
+    "material": ["ROLAND_FP-10", "LED_STRIP"],
     "hardware": ["RASPBERRY_PI-4"],
     "software": ["PYTHON"],
-    "overview": "Скрипт для подсветки клавиш электронного пианино.",
+    "overview": "Скрипт для подсветки клавиш электронного пианино :musical_keyboard:",
     "making": "Репозиторий [piano_key_illuminator](https://github.com/rydercalmdown/piano_key_illuminator) by **_@rydercalmdown_** загруженный на _**`RASPBERRY_PI-4`**_ даёт возможность управлять светодиодной лентой и каждым её светодиодом отдельно. Лента и электронное пианино подключены к _**`RASPBERRY_PI-4`**_, _midi_-сигнал передается по _USB_ и зажигает светодиод соответствующий нажатой клавише на пианино." 
 }
